tests/snapshots/file@base@closure@close_over_method_parameter.lox.snap
---
source: tests/common/mod.rs
description: "var f;\n\nclass Foo {\n  method(param) {\n    fun f_() {\n      print param;\n    }\n    f = f_;\n  }\n}\n\nFoo().method(\"param\");\nf(); // expect: param\n"
input_file: crafting_interpreters_test_files/closure/close_over_method_parameter.lox
---
OUT: 
param

===
ERR:
