tests/snapshots/file@base@closure@unused_closure.lox.snap
---
source: tests/common/mod.rs
description: "// This is a regression test. There was a bug where the VM would try to close\n// an upvalue even if the upvalue was never created because the codepath for\n// the closure was not executed.\n\n{\n  var a = \"a\";\n  if (false) {\n    fun foo() { a; }\n  }\n}\n\n// If we get here, we didn't segfault when a went out of scope.\nprint \"ok\"; // expect: ok\n"
input_file: crafting_interpreters_test_files/closure/unused_closure.lox
---
OUT: 
ok

===
ERR:
