tests/snapshots/file@base@constructor@early_return.lox.snap
---
source: tests/common/mod.rs
description: "class Foo {\n  init() {\n    print \"init\";\n    return;\n    print \"nope\";\n  }\n}\n\nvar foo = Foo(); // expect: init\nprint foo; // expect: Foo instance\n"
input_file: crafting_interpreters_test_files/constructor/early_return.lox
---
OUT: 
init
<instance Foo>

===
ERR:
